--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="button">ADD</button>
     </div>
     <div class="works_container"></div>
-  <div>
+  </div>
 
   <script src="scripts/mechanic.js"></script>
   <script src="scripts/load.js"></script>
