--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/css.css"/>
   <link rel="stylesheet" href="styles/animate.css"/>
+  <link rel="stylesheet" href="icon/fontello.css">
 
 </head>
 
@@ -25,9 +26,10 @@
     <div class="works_container"></div>
   </div>
 
+  <script src="scripts/save.js"></script>
   <script src="scripts/mechanic.js"></script>
   <script src="scripts/load.js"></script>
-  <script src="scripts/save.js"></script>
+
 
 </body>
 
