--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="up_list"><span style="padding:10px;">DO IT</span>
-    <span style="padding:10px; margin-left:220px;" id="open">Open: 0</span>
+    <!-- <span style="padding:10px; margin-left:220px;" id="open">Open: 0</span> -->
     </div>
 
     <div class="add_menu">
