--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width">
-  <title>plany</title>
+  <title>DO-It</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/css.css"/>
@@ -26,10 +26,7 @@
     <div class="works_container"></div>
   </div>
 
-  <script src="scripts/save.js"></script>
   <script src="scripts/mechanic.js"></script>
-  <script src="scripts/load.js"></script>
-
 
 </body>
 
