--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/css.css"/>
-  <link rel="stylesheet" href="styles/animate.css"/>
+  <link rel="stylesheet" href="styles/animations.css"/>
   <link rel="stylesheet" href="icon/fontello.css">
 
 </head>
