--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 <body>
   <div class="container">
-    <div class="up_list"><span style="padding:10px;">DO IT</span>
-    <!-- <span style="padding:10px; margin-left:220px;" id="open">Open: 0</span> -->
-    </div>
+      <div class="up_list">
+        <span style="padding:10px;">DO IT</span>
+      </div>
 
-    <div class="add_menu">
-      <input id="text"></input>
-      <button id="button">ADD</button>
-    </div>
-    <div class="works_container"></div>
+      <form action="">
+          <input id="text"></input>
+          <button id="button">ADD</button>
+      </form>
+      <div class="works_container"></div>
   </div>
 
   <script src="scripts/mechanic.js"></script>
