--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 <body>
   <div class="container">
-      <div class="up_list">
+      <div class="up_list center">
         <span style="padding:10px;">DO IT</span>
       </div>
 
-      <form action="">
+      <form action="" class="center">
           <input id="text"></input>
           <button id="button">ADD</button>
       </form>
