Add custon header

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,9 @@
 
 <body>
   <div class="container">
+      <div class="header">
+        <a id="close-btn" style="center"></a><a id="min-btn" style="center"></a>
+      </div>
       <form action="" class="center">
           <input id="text"></input>
           <button id="button">ADD</button>
@@ -23,6 +26,7 @@
   </div>
 
   <script src="scripts/mechanic.js"></script>
+  <script src="scripts/remoteWindow.js"></script>
 
 </body>
 
