--- a/client/index.html
+++ b/client/index.html
@@ -6,23 +6,23 @@
   <meta name="viewport" content="width=device-width">
   <title>DO-IT</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles/css.css"/>
-  <link rel="stylesheet" href="styles/animations.css"/>
-  <link rel="stylesheet" href="icon/fontello.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
 </head>
 
 <body>
   <div class="container">
       <div class="header">
-        <a id="close-btn" style="center"></a><a id="min-btn" style="center"></a>
+        <a id="close-btn"></a>
+        <a id="min-btn"></a>
       </div>
-      <form action="" class="center">
-          <input id="text"></input>
-          <button id="button">ADD</button>
+      <form>
+          <input id="text" type="text"/>
+          <input type="submit" value="Add"/>
       </form>
-      <div class="works_container"></div>
+      <ul></ul>
   </div>
 
   <script src="scripts/mechanic.js"></script>
